--- a/index.ipynb
+++ b/index.ipynb
@@ -358,16 +358,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f1cdc2187b8>"
+       "<folium.map.Marker at 0x7fdbc7b4b160>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
