Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -457,16 +457,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f1cb80bd208>"
+       "<folium.map.Marker at 0x7fdbc7aaa208>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
